oss-knowledge-gitops/backend/orchestrator/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: orchestrator
spec:
    selector:
        app: orchestrator
    ports:
        - port: 8000
          targetPort: 8000
    type: ClusterIP
